update install and  measurement shell scripts (#164)
Updates the install and measurement scripts with the following improvements.
* Tomcat 8.5 installation with the URL coming from Apache EU mirror
* Updates node.js to 8.9x
* Java installation made atomic operation
* Removes errors in the tomcat.service file
* Improves the code in install.sh shell script